# pyCCG

./: .gitignore  README.md  pyproject.toml
pyccg/: __init__.py  synergy.py  titration.py
pyctg/: synergy.py  titration.py
tests/: test_synergy.py  test_synergy_heatmap.py
