[project]
name = "pyccg"
version = "0.0.1"
description = "Python framework for dose-response analysis and plotting"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Abe Arab", email = "abolfazl.arab@ucsf.edu" },
]
dependencies = [
  "matplotlib",
  "numpy",
  "pandas",
  "py50",
  "synergy",
]

[project.urls]
Homepage = "https://github.com/abearab/pyCCG"
Repository = "https://github.com/abearab/pyCCG"

[dependency-groups]
test = [
  "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pyccg"]
